k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notbad-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: app
        image: 820469828681.dkr.ecr.eu-north-1.amazonaws.com/notbad:d5105
#          resources:
#            limits:
#              memory: 100Mi
#            requests:
#              cpu: 10m
#              memory: 20Mi
        ports:
          - containerPort: 8089
        livenessProbe:
          httpGet:
            path: /
            port: 8089
        readinessProbe:
          httpGet:
            path: /
            port: 8089
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
        - name: regcred
