k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notbad
  namespace: notbad
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: web
      port: 8089
      protocol: TCP
      targetPort: 8089
